# moh-time-os

./: .api-baseline.json  .bandit  .env.example  .envrc  .gitignore  .gitleaks.toml  .mypy-baseline.txt  .pre-commit-config.yaml  .ratchet-baseline.json  .secrets.baseline  .semgrepignore  :memory:  ARCHITECTURE_FIXES.md  ARCHITECTURE_V2.md  ARCHITECTURE_V3.md  BRIEF_AUTONOMOUS_OPERATIONS.md  BRIEF_BIDIRECTIONAL_INTEGRATIONS.md  BRIEF_CONVERSATIONAL_INTERFACE.md  BRIEF_DATA_GOVERNANCE.md  BRIEF_DATA_QUALITY_SCORING.md  BRIEF_HARDENING.md  BRIEF_INTELLIGENCE_DEPTH.md  BRIEF_INTELLIGENCE_EXPANSION.md  BRIEF_INTELLIGENCE_OBSERVABILITY.md  BRIEF_INTELLIGENCE_WIRING.md  BRIEF_INTERFACE_EXPERIENCE.md  BRIEF_NOTIFICATION_INTELLIGENCE.md  BRIEF_PERFORMANCE_SCALE.md  BRIEF_PIPELINE_HARDENING.md  BRIEF_SECURITY_HARDENING.md  BRIEF_STRATEGIC_MEMORY.md  BRIEF_TEMPORAL_CONTEXTUAL_INTELLIGENCE.md  BRIEF_TEST_REMEDIATION.md  BRIEF_V4_V5_RECONCILIATION.md  BUILD_PLAN.md  BUILD_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COLLECTOR_AUDIT.md  (+32 more)
.claude/: plan.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.semgrep/: moh-time-os-rules.yaml  policy-rules.yaml  rules.yaml  security-rules.yaml
_archive/: MANIFEST.md
_forensics/: server.py314.dis.all.txt
_guardrails/: INDEX.md
_guardrails/python_config/: pyproject.toml
api/: BYTECODE_MANIFEST.md  __init__.py  action_router.py  auth.py  auth_middleware.py  chat_webhook_router.py  export_router.py  governance_router.py  intelligence_router.py  paginated_router.py  response_models.py  server.py  server_reconstructed.py  server_recovered.py  spec_router.py  sse_router.py  wave2_router.py
audit-remediation/: AGENT.md  GAP_REPORT_2026-03-10.md  HANDOFF.md  PHASE_A2_FINDINGS_2026-05-31.md  TEST_SUITE_TRIAGE_2026-06-04.md  VERIFICATION_LOG_S22.md  VERIFICATION_LOG_S23.md  VERIFICATION_LOG_S24.md  VERIFICATION_LOG_S_action_framework_test_isolation.md  VERIFICATION_LOG_S_action_schema_test_repair.md  VERIFICATION_LOG_S_bug5b_intelligence_api.md  VERIFICATION_LOG_S_canonical_docstrings.md  VERIFICATION_LOG_S_chat_actionframework_store.md  VERIFICATION_LOG_S_collector_expansion_dict_shape.md  VERIFICATION_LOG_S_collector_status_entry_and_recovery.md  VERIFICATION_LOG_S_contract_test_tree_scope.md  VERIFICATION_LOG_S_daemon_resilience_test_repair.md  VERIFICATION_LOG_S_gmail_unique_schema_fix.md  VERIFICATION_LOG_S_intelligence_except_broaden.md  VERIFICATION_LOG_S_intelligence_phase_unbound.md  VERIFICATION_LOG_S_linker_store_migration.md  VERIFICATION_LOG_S_missed_surface_test_isolation.md  VERIFICATION_LOG_S_phase1_realbugs.md  VERIFICATION_LOG_S_rot_change_bundles.md  VERIFICATION_LOG_S_rot_key_manager.md  VERIFICATION_LOG_S_sqlite_transaction_rollback.md  VERIFICATION_LOG_S_statestore_write_path.md  VERIFICATION_LOG_S_sysmap_prefix_fix.md  VERIFICATION_LOG_S_task_project_linker_singleton_rot.md  VERIFICATION_LOG_S_tasks_collector_propagation_test_repair.md  VERIFICATION_LOG_S_tasks_collector_tz_fix.md  VERIFICATION_LOG_S_writepath_query_guard.md  VERIFICATION_LOG_S_ws1-5_autonomous.md  VERIFICATION_LOG_S_ws4.md  VERIFICATION_LOG_S_ws5.md  VERIFICATION_LOG_S_xero_expansion_test_repair.md  VERIFICATION_LOG_TEMPLATE.md  a2_attachments_fix.sql  a2_gmail_dedupe.sql  rot_diagnoses_2026-06-04.json  (+1 more)
cli/: action_queue_cli.py  board.py  calibrate.py  main.py  mohos.py  outbox_reconcile.py  pulse.py  render_queue.py  tasks_reset.py  xero_auth.py  xero_auth_auto.py
collectors/: __init__.py  asana_ops.py  briefing.py  calendar_awareness.py  calendar_collector.py  chat.py  chat_direct.py  collect_all.py  contacts_direct.py  delegation.py  discovery.py  drive_direct.py  generate_queue.py  gmail.py  gmail_direct.py  gmail_multi_user.py  lanes.py  scheduled_collect.py  tasks.py  tasks_fast.py  tasks_sync.py  v4_integration.py  xero_ops.py
config/: .gitignore  business_calendar.yaml  delegation.yaml  feature_flags.yaml  governance.yaml  intelligence.yaml  knowledge_base.json  lanes.yaml  sources.yaml  sync_schedule.yaml  team_emails.txt  vip.yaml
data/: config.json  config_history.json  conflicts.json  daemon_state.json  delegation_graph.json  delegation_packets.json  governance.json  mode_history.json  moh_time_os_v2.db  projects.json  state.db.backup.20260201_161032  state.json
design/: CONTROL_ROOM_FINAL.md  CONTROL_ROOM_SPEC.md  CONTROL_ROOM_V1.md
detection-system/: AGENT.md  HANDOFF.md  commit-workflow.md  state.json
docs/: BRANCH_PROTECTION_SETUP.md  BRIEFING_STATE_OF_MOH_TIME_OS.md  DEV_RULES.md  DISCOVERY.md  FEB23_DAMAGE_REPORT.md  FINANCIAL_PULSE_DESIGN.md  IMPLEMENTATION.md  INVESTIGATION_LOG.md  LINT_BASELINE_AUDIT.md  PAGE0_AGENCY_CONTROL_ROOM_SPEC.md  PAGE1_DELIVERY_COMMAND_SPEC.md  PRODUCTION_ASSESSMENT.md  PRODUCTION_CHECKLIST.md  SAFETY.md  SPEC-EXECUTIVE-SUMMARY.md  SPEC-PATCH-v2.9.md  STEP_1B_PLAN_AND_CHECKLIST.md  SYSTEM_DESIGN.md  SYSTEM_MAP.md  closure-audit.md  endpoint-fix-audit.md  logs.md  openapi.json  remediation-plan.md  remediation-silent-failures.md  schema.sql  system-map.json
engine/: action_queue.py  asana_client.py  calibration.py  chat_discovery.py  discovery.py  financial_pulse.py  gogcli.py  heartbeat_pulse.py  knowledge_base.py  render_html.py  rules_store.py  store.py  tasks_board.py  tasks_discovery.py  xero_client.py
evidence/: evidence.json  summary.md
frontend/: command_center.html  conversational_ui.html  governance_console.html  ops_dashboard.html
lib/: __init__.py  aggregator.py  autonomous_loop.py  backup.py  brief.py  build_client_identities.py  build_team_registry.py  calibration.py  capture.py  change_bundles.py  classify.py  clock.py  collector_lock.py  collector_registry.py  command_center.py  commitment_extractor.py  compat.py  config.py  config_store.py  conflicts.py  contacts.py  credential_paths.py  cron_tasks.py  cycle_result.py  daemon.py  data_lifecycle.py  db.py  db_writer.py  delegation_engine.py  delegation_graph.py  enrollment_detector.py  entities.py  entity_link_confirmer.py  entity_linker.py  gates.py  governance.py  health.py  heartbeat_processor.py  items.py  (+41 more)
(+1415 files in other folders)
