# Moh Time OS - Project Configuration
# Toolchain: uv (Python package manager)
# API Framework: FastAPI/Uvicorn

[project]
name = "moh-time-os"
version = "1.0.0"
description = "Personal Operating System for Executive Workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "flask>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "cryptography>=42.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-httplib2>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
    "httpx>=0.27.0",
    "pip-audit>=2.0.0",
    "vulture>=2.0.0",
    "mutmut>=2.4.0",
    "semgrep==1.151.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==========================================
# HATCH - Build Configuration
# ==========================================
[tool.hatch.build.targets.wheel]
packages = ["lib", "api", "cli", "collectors", "engine"]

[tool.hatch.build.targets.sdist]
include = [
    "lib/",
    "api/",
    "cli/",
    "collectors/",
    "engine/",
    "tests/",
    "scripts/",
    "pyproject.toml",
    "README.md",
]

# ==========================================
# RUFF - Linting & Formatting
# ==========================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "F401",   # unused imports (too noisy in large refactors)
    "S101",   # assert usage (allowed in tests)
    "B008",   # function call in default arg (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # Allow asserts and hardcoded credentials in tests
# Legacy files with pre-existing issues (not modifying logic)
"api/spec_router.py" = ["B904", "S608"]  # Protected file - legacy exception/SQL patterns
"lib/collectors/base.py" = ["B904", "S602"]  # Legacy subprocess and exception patterns
"lib/safety/migrations.py" = ["S608"]  # Dynamic DDL construction (table/column names)
"lib/safety/utils.py" = ["S110"]  # Intentional silent exception handling
"lib/ui_spec_v21/detectors.py" = ["S110"]  # Intentional silent exception handling
"lib/ui_spec_v21/endpoints.py" = ["S608"]  # Validated SQL construction
"lib/ui_spec_v21/org_settings.py" = ["S110"]  # Intentional silent exception handling
"lib/ui_spec_v21/time_utils.py" = ["S110", "S608"]  # Intentional silent handling + validated SQL
# V5 modules: SQL identifiers from allowlisted dicts/enums, not user input
"lib/v5/database.py" = ["S608"]  # Generic CRUD - table/where from internal callers only
"lib/v5/api/routes/issues.py" = ["S608"]  # Validated scope_type from enum
"lib/v5/api/routes/signals.py" = ["S608"]  # Validated entity_type from enum
"lib/v5/services/signal_service.py" = ["S608"]  # table_map allowlist
"lib/v5/issues/formation_service.py" = ["S608"]  # scope_level from pattern enum
"lib/v5/resolution/resolution_service.py" = ["S608"]  # scope_column from fixed pattern
"lib/v5/resolution/balance_service.py" = ["S608"]  # where from parameterized builder
"lib/v5/repositories/signal_repository.py" = ["S608"]  # scope_column from enum
"lib/v5/detectors/base.py" = ["S608"]  # signal_type from detector registry
# Legacy lib modules with allowlisted SQL patterns
"lib/aggregator.py" = ["S608"]  # Internal query builder
"lib/entities.py" = ["S608"]  # Entity type allowlist
"lib/items.py" = ["S608"]  # Column allowlist for updates
"lib/state_store.py" = ["S608"]  # Internal CRUD helpers
"lib/store.py" = ["S608"]  # Table allowlist
"lib/query_engine.py" = ["S608"]  # Pre-built static queries
"lib/client_truth/health_calculator.py" = ["S608"]  # Internal query
"lib/agency_snapshot/delivery.py" = ["S608"]  # Internal report query
"lib/v4/identity_service.py" = ["S608"]  # Profile ID allowlist
"lib/v4/issue_service.py" = ["S608"]  # Signal ID parameterized
"lib/v4/proposal_aggregator.py" = ["S608"]  # Legacy threshold constant
"lib/v4/signal_service.py" = ["S608"]  # Signal ID parameterized
"lib/migrations/migrate_to_spec_v12.py" = ["S608"]  # Migration DDL
"lib/migrations/v4_milestone1_truth_proof.py" = ["S608"]  # Migration verification
# Intelligence modules with late imports (complex initialization order)
"lib/intelligence/patterns.py" = ["E402"]  # Imports after pattern definitions
"lib/intelligence/proposals.py" = ["E402", "B007"]  # Late imports + unused loop vars
"lib/intelligence/scorecard.py" = ["E402"]  # Imports after score functions
"lib/intelligence/signals.py" = ["E402"]  # Imports after signal catalog
"lib/intelligence/engine.py" = ["B007"]  # Unused loop vars in aggregation
# Security/hash utilities - md5 used for checksums, not crypto
"lib/commitment_extractor.py" = ["S324"]  # md5 for content hashing
"lib/commitment_truth/llm_extractor.py" = ["S324"]  # md5 for dedup
"lib/promise_tracker.py" = ["S324"]  # md5 for ID generation
# Intentional silent exception handling
"lib/commitment_truth/detector.py" = ["S112"]  # Skip malformed records
"lib/heartbeat_processor.py" = ["S110"]  # Best-effort heartbeat processing
"lib/time_truth/scheduler.py" = ["S110"]  # Optional capacity module
# Legacy patterns
"lib/daemon.py" = ["S603"]  # Subprocess with known command
"lib/v4/artifact_service.py" = ["B904"]  # Legacy raise pattern

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ==========================================
# BANDIT - Security Scanning
# ==========================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "lib/safety/migrations.py"]
skips = ["B101", "B602", "B608"]  # B101: asserts, B602: shell=True, B608: dynamic SQL

# ==========================================
# MYPY - Type Checking
# ==========================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
    "venv/",
    "__pycache__/",
    "moh_time_os/",
]

# ==========================================
# PYTEST - Testing
# ==========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ==========================================
# MUTMUT - Mutation Testing
# ==========================================
[tool.mutmut]
# Focus mutation testing on critical safety modules
paths_to_mutate = "lib/safety/"
tests_dir = "tests/"
# Skip slow-running tests for faster feedback
runner = "python -m pytest -x -q --tb=no"
# Timeout per mutation (seconds)
timeout = 30

[dependency-groups]
dev = [
    "semgrep==1.151.0",
]
