# Moh Time OS - Project Configuration
# Toolchain: uv (Python package manager)
# API Framework: FastAPI/Uvicorn

[project]
name = "moh-time-os"
version = "1.0.0"
description = "Personal Operating System for Executive Workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "cryptography>=42.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-httplib2>=0.1.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[project.scripts]
moh = "api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==========================================
# HATCH - Build Configuration
# ==========================================
[tool.hatch.build.targets.wheel]
packages = ["lib", "api", "cli", "collectors", "engine"]

[tool.hatch.build.targets.sdist]
include = [
    "lib/",
    "api/",
    "cli/",
    "collectors/",
    "engine/",
    "tests/",
    "scripts/",
    "pyproject.toml",
    "README.md",
]

# ==========================================
# RUFF - Linting & Formatting
# ==========================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "_archive",
    "docs/archive",
    "design",
    "dist",
    "frontend",
    "out",
    "output",
    "moh_time_os.egg-info",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort — enforced import ordering
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long — formatter handles this, double-enforcement is noise
    "B008",   # function call in default arg — FastAPI Depends() requires this pattern
    "S603",   # subprocess call — ruff flags all subprocess.run() including safe list-form
    "S607",   # partial executable path — ruff flags subprocess.run(["git",...]), unfixable
    "UP035",  # deprecated typing imports (typing.List → list) — cosmetic, zero runtime impact
    "UP017",  # datetime.timezone.utc → datetime.UTC alias — cosmetic rename
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108", "E402"]  # assert, fake creds, /tmp, late imports — test infrastructure
"scripts/**/*.py" = ["S108", "S310", "E402"]  # /tmp, urlopen with hardcoded URLs, late imports — script infrastructure

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ==========================================
# BANDIT - Security Scanning
# ==========================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B608"]  # B101: asserts — ruff S101 covers it. B608: hardcoded SQL — ruff S608 covers it.

# ==========================================
# MYPY - Type Checking
# ==========================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
    "venv/",
    "__pycache__/",
    "moh_time_os/",
]

# ==========================================
# PYTEST - Testing
# ==========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires external services",
]

# ==========================================
# MUTMUT - Mutation Testing
# ==========================================
[tool.mutmut]
# Focus mutation testing on critical safety modules
paths_to_mutate = "lib/safety/"
tests_dir = "tests/"
# Skip slow-running tests for faster feedback
runner = "python -m pytest -x -q --tb=no"
# Timeout per mutation (seconds)
timeout = 30

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff==0.15.1",
    "bandit==1.9.3",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
    "httpx>=0.27.0",
    "pip-audit>=2.0.0",
    "vulture>=2.0.0",
    "mutmut>=2.4.0",
    "semgrep~=1.151",
    "types-PyYAML>=6.0",
]
