# Moh Time OS - Project Configuration
# Toolchain: uv (Python package manager)
# API Framework: FastAPI/Uvicorn

[project]
name = "moh-time-os"
version = "1.0.0"
description = "Personal Operating System for Executive Workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "flask>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "cryptography>=42.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "google-auth-httplib2>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
    "httpx>=0.27.0",
    "pip-audit>=2.0.0",
    "vulture>=2.0.0",
    "mutmut>=2.4.0",
    "semgrep==1.151.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==========================================
# HATCH - Build Configuration
# ==========================================
[tool.hatch.build.targets.wheel]
packages = ["lib", "api", "cli", "collectors", "engine"]

[tool.hatch.build.targets.sdist]
include = [
    "lib/",
    "api/",
    "cli/",
    "collectors/",
    "engine/",
    "tests/",
    "scripts/",
    "pyproject.toml",
    "README.md",
]

# ==========================================
# RUFF - Linting & Formatting
# ==========================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["_archive", ".venv", "venv", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "F401",   # unused imports (too noisy in large refactors)
    "S101",   # assert usage (allowed in tests)
    "B008",   # function call in default arg (FastAPI Depends)
    "S608",   # hardcoded SQL - we have custom SQL f-string check
    "B904",   # raise without from - style preference, not a bug
    "E741",   # ambiguous variable name - often valid in math/algo code
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S110", "S603", "S607", "E402"]  # Tests have relaxed patterns
"scripts/**/*.py" = ["E402", "E722", "S603", "S607", "S110", "S112", "B007", "UP038"]  # Scripts have relaxed patterns
"collectors/**/*.py" = ["E402", "S110", "S112", "S603", "S607"]  # Collection scripts have specific patterns
"lib/collectors/**/*.py" = ["E402", "E722", "S110", "S112", "S324", "S105", "S106", "UP035"]  # Debug/test collectors
"api/server.py" = ["E402", "S104"]  # Intentional late imports, FastAPI binds to all interfaces
"engine/**/*.py" = ["S105", "S110", "S112", "S113", "S603"]  # Engine has specific patterns
"lib/**/*.py" = ["S110", "S112", "S113", "S310", "S324", "S602", "S603"]  # Lib modules have specific patterns
"lib/intelligence/**/*.py" = ["E402", "B007"]  # Intelligence modules have late imports and unused loop vars
"cli/xero_*.py" = ["S105", "S106", "S113"]  # Xero CLI has token URLs (not passwords)
"cli/*.py" = ["S603", "S602"]  # CLI modules call subprocess with trusted input

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ==========================================
# BANDIT - Security Scanning
# ==========================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert warnings

# ==========================================
# MYPY - Type Checking (ALL PYTHON - NO EXCLUSIONS)
# ==========================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
# POLICY: No directory exclusions. All code is type-checked.
exclude = [
    ".venv/",
    "venv/",
    "__pycache__/",
    "_archive/",
    "time-os-ui/",
]

# ==========================================
# PYTEST - Testing
# ==========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ==========================================
# MUTMUT - Mutation Testing
# ==========================================
[tool.mutmut]
# Focus mutation testing on critical safety modules
paths_to_mutate = "lib/safety/"
tests_dir = "tests/"
# Skip slow-running tests for faster feedback
runner = "python -m pytest -x -q --tb=no"
# Timeout per mutation (seconds)
timeout = 30

[dependency-groups]
dev = [
    "semgrep==1.151.0",
]
